# cutadapt-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/cutadapt/: Cargo.toml
crates/cutadapt-core/: Cargo.toml
crates/cutadapt-core/src/: align.rs  files.rs  info.rs  json_output.rs  kmer_finder.rs  kmer_heuristic.rs  lib.rs  match_tables.rs  parser.rs  pipeline.rs  predicates.rs  qualtrim.rs  record.rs  report.rs  statistics.rs  steps.rs  tokenizer.rs
crates/cutadapt-core/src/adapters/: linked.rs  matches.rs  mod.rs  single.rs  statistics.rs
crates/cutadapt-core/src/modifiers/: adapter.rs  mod.rs  quality.rs  rename.rs  simple.rs
crates/cutadapt-core/tests/: integration_tests.rs
crates/cutadapt/src/: main.rs
docs/history/: claude-code-fix-benchmark.txt  claude-code-init-project.txt  codex-speed-up.txt
