[workspace]
members = ["crates/cutadapt-core", "crates/cutadapt"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
needletail = "0.6"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
xz2 = "0.1"
bzip2 = "0.5"
rayon = "1"
crossbeam = "0.8"
bitflags = "2"
regex = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
